apps/web/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;

    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;

    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;

    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 70.1%;

    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;

    --radius: 0;
  }

  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;

    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;

    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;

    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer components {
  .gf_shadow {
    @apply shadow-[3px_3px_0px_0px_#000000] transition-shadow duration-150 active:shadow-[0px_0px_0px_0px_#000000];
  }
}

.has-background-grid {
  --background-color: #fff;
  --fill-color: #b8b8b8;
  --background-size: 7.5rem;
  background-image: linear-gradient(#b8b8b8 0.0625rem, transparent 0), linear-gradient(90deg, #b8b8b8 0.0625rem, #fff 0);
  background-image: linear-gradient(var(--fill-color) 0.0625rem, transparent 0.0625rem),
    linear-gradient(to right, var(--fill-color) 0.0625rem, var(--background-color) 0.0625rem);
  background-size: 7.5rem 7.5rem;
  background-size: var(--background-size) var(--background-size);
}

.has-background-rectangle {
  --background-color: #fff;
  --fill-color: #111;
  --background-size: 1rem;
  background-image: repeating-linear-gradient(45deg, #111 25%, transparent 0, transparent 75%, #111 0, #111),
    repeating-linear-gradient(45deg, #111 25%, #fff 0, #fff 75%, #111 0, #111);
  background-image: repeating-linear-gradient(
      45deg,
      var(--fill-color) 25%,
      transparent 25%,
      transparent 75%,
      var(--fill-color) 75%,
      var(--fill-color)
    ),
    repeating-linear-gradient(
      45deg,
      var(--fill-color) 25%,
      var(--background-color) 25%,
      var(--background-color) 75%,
      var(--fill-color) 75%,
      var(--fill-color)
    );
  background-position:
    0 0,
    0.5rem 0.5rem;
  background-position:
    0 0,
    calc(var(--background-size) / 2) calc(var(--background-size) / 2);
  background-size: 1rem 1rem;
  background-size: var(--background-size) var(--background-size);
}

.mapboxgl-ctrl-attrib-inner {
  @apply hidden;
}

a.mapboxgl-ctrl-logo {
  display: none !important;
}

